Some fixes in the translations and updated to 100%; usage of Romanian quotes instead of the retarded pair `\'

--- a/debian/changelog
+++ b/debian/changelog
@@ -51,6 +51,7 @@ dpkg (1.13.20~) UNRELEASED; urgency=low
   * Polish (Robert Luberda).
   * Basque (Piarres Beobide). Closes: #366187
   * Czech (Miroslav Kure).
+  * Romanian (Eddy Petrişor).
 
   [ Updated man pages translations ]
   * Polish (Robert Luberda).
