--- a/dselect/po/ro.po
+++ b/dselect/po/ro.po
@@ -18,15 +18,14 @@ msgstr ""
 "Project-Id-Version: ro\n"
 "Report-Msgid-Bugs-To: debian-dpkg@lists.debian.org\n"
 "POT-Creation-Date: 2006-05-03 11:56+0300\n"
-"PO-Revision-Date: 2006-04-11 23:11+0300\n"
+"PO-Revision-Date: 2006-05-16 00:34+0300\n"
 "Last-Translator: Eddy Petrişor <eddy.petrisor@gmail.com>\n"
 "Language-Team: Romanian <debian-l10n-romanian@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Plural-Forms: nplurals=3;plural=(n==1?0:(((n%100>19)||((n%100==0)&&(n!=0)))?2:1))\n"
 "X-Generator: KBabel 1.11.2\n"
-"Plural-Forms: nplurals=3;plural=(n==1?0:(((n%100>19)||((n%100==0)&&(n!=0)))?"
-"2:1))\n"
 
 #  spaţiile sunt necesare!!
 #: dselect/basecmds.cc:121
@@ -56,9 +55,9 @@ msgid ""
 "Press a key from the list above, <space> or `q' to exit help,\n"
 "  or `.' (full stop) to read each help page in turn. "
 msgstr ""
-"Apăsaţi o tastă din lista care urmează, <spaţiu> sau `q' pentru ieşire din "
+"Apăsaţi o tastă din lista care urmează, <spaţiu> sau „q” pentru ieşire din "
 "ajutor,\n"
-"  sau  `.' (oprire totală) pentru a citi fiecare pagină de ajutor. "
+"  sau  „.” (oprire totală) pentru a citi fiecare pagină de ajutor. "
 
 #: dselect/basecmds.cc:198
 msgid "error reading keyboard in help"
@@ -413,11 +412,11 @@ msgstr ""
 "\n"
 "Vă va fi arătată o listă de pachete care sunt instalate sau disponibile\n"
 "pentru instalare. Puteţi naviga prin listă folosind tastele cursorului,\n"
-"puteţi marca pachetele pentru instalare (folosind `+') sau dezinstalare "
-"(folosind `-').\n"
+"puteţi marca pachetele pentru instalare (folosind „+”) sau dezinstalare "
+"(folosind „-”).\n"
 "Pachetele pot fi marcate fie individual fie în grupuri, iniţial veţi vedea "
 "că\n"
-"linia `Toate pachetele' este selectată.  `+', `-' şi toate celelalte vor "
+"linia „Toate pachetele” este selectată.  „+”, „-” şi toate celelalte vor "
 "afecta toate\n"
 "pachetele descrise de linia evidenţiată.\n"
 "\n"
@@ -428,11 +427,11 @@ msgstr ""
 "Ar trebui să citiţi lista de taste şi explicaţiile de pe ecran.\n"
 "Este disponibil mult ajutor imediat, sunteţi rugat să vă folosiţi de el - "
 "apăsaţi când doriţi\n"
-"`?'pentru a primi ajutor.\n"
+"„?” pentru a primi ajutor.\n"
 "\n"
 "Când aţi terminat de selectat pachetele, apăsaţi <enter> pentru a confirma "
 "schimbările,\n"
-"sau `X' pentru a ieşi fără să salvaţi schimbările. O verificare finală la "
+"sau „X” pentru a ieşi fără să salvaţi schimbările. O verificare finală la "
 "conflicte şi\n"
 "dependenţe va fi făcută - aici şi dvs veţi putea vedea o sublistă.\n"
 "\n"
@@ -468,15 +467,15 @@ msgstr ""
 "pentru instalare. Din moment ce nu aveţi privilegiile necesare pentru a \n"
 "actualiza starea pachetelor, sunteţi în modul doar-citire. Puteţi naviga \n"
 "prin listă folosind tastele pentru cursor (vă rog, vedeţi ecranul de ajutor\n"
-"`Combinaţii taste'), observa starea pachetelor şi citi informaţiile despre "
+"„Combinaţii taste”), observa starea pachetelor şi citi informaţiile despre "
 "ele.\n"
 "\n"
 "Ar trebui să citiţi lista de taste şi explicaţiile de pe ecran.\n"
 "Este disponibil mult ajutor imediat, sunteţi rugat să vă folosiţi de el - "
 "apăsaţi oricând doriţi\n"
-" `?' pentru a primi ajutor.\n"
+" „?” pentru a primi ajutor.\n"
 "\n"
-"Când aţi terminat de selectat pachetele, apăsaţi `Q' sau <enter> pentru a "
+"Când aţi terminat de selectat pachetele, apăsaţi „Q” sau <enter> pentru a "
 "ieşi.\n"
 "\n"
 "Apăsaţi <spaţiu> pentru a părăsi ajutorul şi a intra în listă.\n"
@@ -528,27 +527,27 @@ msgstr ""
 "\n"
 "Veţi vedea o sub-listă conţinând pachetele implicate.  Jumătatea inferioară "
 "a\n"
-"afişajului arată conflictele şi dependenţele relevante; folosiţi `i' pentru "
+"afişajului arată conflictele şi dependenţele relevante; folosiţi „i” pentru "
 "a circula între\n"
 "acestea, descrierile pachetelor şi informaţia internă de control.\n"
 "\n"
-"Au fost calculate un set de pachete `sugerate', şi selecţiile iniţiale în\n"
+"Au fost calculate un set de pachete „sugerate”, şi selecţiile iniţiale în\n"
 "această sub-listă au fost aranjate să se potrivească cu acelea, astfel încât "
 "doar apăsaţi Enter\n"
 "pentru a accepta sugestiile, dacă doriţi. Puteţi anula schimbările care "
 "determină\n"
-"probleme, şi vă duceţi înapoi la lista principală, apăsând majuscula `X'.\n"
+"probleme, şi vă duceţi înapoi la lista principală, apăsând majuscula „X”.\n"
 "\n"
 "Puteţi de asemenea să navigaţi prin listă şi schimba selecţiile după "
 "dorinţă,\n"
-"şi puteţi anula sugestiile folosind majusculele `D' ori `R'\n"
+"şi puteţi anula sugestiile folosind majusculele „D” ori „R”\n"
 "(vedeţi ecranul de ajutor cu combinaţiile de taste). Puteţi folosi "
 "majuscula\n"
-"`Q' pentru a forţa acceptul în situaţia curent afişată, în caz că vreţi să\n"
+"„Q” pentru a forţa acceptul în situaţia curent afişată, în caz că vreţi să\n"
 "treceţi peste o recomandare sau vă gândiţi că programul se înşeală.\n"
 "\n"
 "Apasaţi <spaţiu> pentru a părăsi ajutorul şi a intra în sub-listă; nu "
-"uitaţi: apăsaţi `?' pentru ajutor.\n"
+"uitaţi: apăsaţi „?” pentru ajutor.\n"
 
 #: dselect/helpmsgs.cc:100
 msgid "Display, part 1: package listing and status chars"
@@ -588,29 +587,29 @@ msgstr ""
 "Jumătatea superioară a ecranului arată o listă de pachete. La fiecare pachet "
 "veţi vedea\n"
 "patru coloane pentru starea curentă în sistem şi marcajul. În modul concis "
-"(folosiţi `v'\n"
+"(folosiţi „v”\n"
 "pentru a comuta la afişajul detaliat) acestea sunt caractere individuale, de "
 "la stânga la dreapta:\n"
 "\n"
 " Fanion de (E)roare: Spaţiu - fără eroare (dar pachetul ar putea fi "
 "deteriorat - vedeţi mai jos)\n"
-"                       `R'  - eroare gravă în timpul instalării, are nevoie "
+"                       „R”  - eroare gravă în timpul instalării, are nevoie "
 "de reinstalare;\n"
 " Starea (I)nstalării:  Spaţiu - neinstalat;\n"
-"                         `*'  - instalat;\n"
-"                         `-'  - neinstalat dar fişierele de configurare "
+"                         „*”  - instalat;\n"
+"                         „-”  - neinstalat dar fişierele de configurare "
 "rămân;\n"
-"          pachetele în { `U'  - despachetat dar încă neconfigurat;\n"
-"          aceste stări { `C'  - semi-configurat (s-a întâlnit eroare);\n"
-"      sunt deteriorate { `I'  - semi-instalat (s-a întâlnit eroare).\n"
+"          pachetele în { „U”  - despachetat dar încă neconfigurat;\n"
+"          aceste stări { „C”  - semi-configurat (s-a întâlnit eroare);\n"
+"      sunt deteriorate { „I”  - semi-instalat (s-a întâlnit eroare).\n"
 " Vechiul marcaj (O): ceea ce s-a cerut de la acest pachet înainte de a afişa "
 "această listă;\n"
 " (M)arcaj: ceea ce se cere de la acest pachet:\n"
-"  `*': marcat pentru instalare sau îmbunătăţire;\n"
-"  `-': marcat pentru ştergere, dar fişierele de configurare rămân;\n"
-"  `=': în aşteptare: pachetul nu va fi procesat deloc;\n"
-"  `_': marcat pentru ştergere completă - inclusiv configurarea;\n"
-"  `n': pachetul este nou şi poate încă fi marcat pentru instalare/ştergere/"
+"  „*”: marcat pentru instalare sau îmbunătăţire;\n"
+"  „-”: marcat pentru ştergere, dar fişierele de configurare rămân;\n"
+"  „=”: în aşteptare: pachetul nu va fi procesat deloc;\n"
+"  „_”: marcat pentru ştergere completă - inclusiv configurarea;\n"
+"  „n”: pachetul este nou şi poate încă fi marcat pentru instalare/ştergere/"
 "&c.\n"
 "\n"
 "De asemenea sunt afişate pentru fiecare pachet Prioritatea, Secţiunea, "
@@ -650,16 +649,16 @@ msgid ""
 msgstr ""
 "* Evidenţierea: O linie din lista de pachete va fi evidenţiată. Semnifică "
 "ce\n"
-"  pachete sunt afectate de tastele `+', `-' şi `_'.\n"
+"  pachete sunt afectate de tastele „+”, „-” şi „_”.\n"
 "\n"
 "* Linia despărţitoare din mijlocul ecranului arată o scurtă descriere a\n"
 "  stării pachetului curent evidenţiat, sau o descriere a grupului care "
 "este \n"
 "  evidenţiat dacă este o linie de grupuri. Dacă nu înţelegeţi sensul\n"
 "  unora dintre caracterele de stare afişate, duceţi-vă la pachetul\n"
-"  respectiv şi uitaţi-vă la linia despărţitoare, sau folosiţi tasta `v' "
+"  respectiv şi uitaţi-vă la linia despărţitoare, sau folosiţi tasta „v” "
 "pentru afişaj\n"
-"  detaliat (apăsaţi din nou 'v' pentru a vă reîntoarce la afişarea "
+"  detaliat (apăsaţi din nou „v” pentru a vă reîntoarce la afişarea "
 "concisă).\n"
 "\n"
 "* Partea inferioară a ecranului arată mai multe informaţii despre\n"
@@ -672,7 +671,7 @@ msgstr ""
 "curent\n"
 "  (în sublista de rezoluţii de conflicte/dependenţe).\n"
 "\n"
-"  Folosiţi tasta `i' pentru a circula printre afişaje, şi `I' pentru a "
+"  Folosiţi tasta „i” pentru a circula printre afişaje, şi „I” pentru a "
 "ascunde\n"
 "  afişajul de informaţii sau a-l mări până la a utiliza aproape tot "
 "ecranul.\n"
@@ -718,12 +717,12 @@ msgstr ""
 "o\n"
 "descriere a fiecărei metode, dacă este disponibilă.\n"
 "\n"
-"Dacă doriţi să ieşiţi fără a modifica nimic folosiţi tasta `x' în timp ce\n"
+"Dacă doriţi să ieşiţi fără a modifica nimic folosiţi tasta „x” în timp ce\n"
 "sunteţi în lista metodelor de instalare.\n"
 "\n"
-"O listă completă de taste este disponibilă apăsând acum 'k', sau din meniul "
+"O listă completă de taste este disponibilă apăsând acum „k”, sau din meniul "
 "de\n"
-"ajutor, accesibilă apăsând '?'.\n"
+"ajutor, accesibilă apăsând „?”.\n"
 
 #: dselect/helpmsgs.cc:167
 msgid "Keystrokes for method selection"
@@ -902,9 +901,11 @@ msgid ""
 "Usage: %s [<option> ...] [<action> ...]\n"
 "\n"
 msgstr ""
+"Utilizare: %s [<opţiune> ...] [<acţiune> ...]\n"
+"\n"
 
 #: dselect/main.cc:175
-#, fuzzy, c-format
+#, c-format
 msgid ""
 "Options:\n"
 "  --admindir <directory>     Use <directory> instead of %s.\n"
@@ -914,22 +915,13 @@ msgid ""
 "                             Configure screen colours.\n"
 "\n"
 msgstr ""
-"Utilizare: %s [<opţiune> ...] [<acţiune> ...]\n"
-"\n"
 "Opţiuni:\n"
 "  --admindir <director>      Foloseşte <director> în loc de %s.\n"
 "  --expert                   Porneşte modul expert.\n"
 "  --debug <file> | -D<file>  Porneşte depanarea, trimiţând ieşirea în "
 "<file>.\n"
-"  --colour | --color screenpart:[prim plan],[fundal][:atrib[+atrib+..]]\n"
+"  --colour | --color parteecran:[prim plan],[fundal][:atrib[+atrib+..]]\n"
 "                             Configurează culorile ecranului.\n"
-"  --help                     Afişează acest mesaj de ajutor.\n"
-"  --version                  Afişează versiunea.\n"
-"  --license                  Afişează licenţa.\n"
-"\n"
-"Acţiuni:\n"
-"  access update select install config remove quit\n"
-"\n"
 
 #: dselect/main.cc:184
 #, c-format
@@ -939,6 +931,10 @@ msgid ""
 "  --license | --licence      Show the license.\n"
 "\n"
 msgstr ""
+"  --help                     Afişează acest mesaj de ajutor.\n"
+"  --version                  Afişează versiunea.\n"
+"  --license | --licence      Afişează licenţa.\n"
+"\n"
 
 #: dselect/main.cc:190
 #, c-format
@@ -947,6 +943,9 @@ msgid ""
 "  access update select install config remove quit\n"
 "\n"
 msgstr ""
+"Acţiuni:\n"
+"  access update select install config remove quit\n"
+"\n"
 
 #: dselect/main.cc:194
 #, c-format
@@ -1131,8 +1130,7 @@ msgstr "nu pot aştepta după %.250s"
 #: dselect/method.cc:175
 #, c-format
 msgid "got wrong child's status - asked for %ld, got %ld"
-msgstr ""
-"am recepţionat o stare greşită a procesului-fiu - cerut %ld, recepţionat %ld"
+msgstr "am recepţionat o stare greşită a procesului-fiu - cerut %ld, recepţionat %ld"
 
 #: dselect/method.cc:186
 #, c-format
@@ -1625,7 +1623,7 @@ msgstr ""
 "\n"
 "Dacă mutaţi cursorul pe un rând cu un pachet anume, veţi vedea aici "
 "informaţii despre acel pachet.\n"
-"Puteţi folosi `o' şi `O' pentru schimbarea ordinii de sortare dându-vă "
+"Puteţi folosi „o” şi „O” pentru schimbarea ordinii de sortare dându-vă "
 "posibilitatea să marcaţi pachetele în diferite moduri de grupare."
 
 #: dselect/pkginfo.cc:96
@@ -1761,3 +1759,4 @@ msgstr "Ver. Inst"
 #: dselect/pkgtop.cc:295
 msgid "Avail.ver"
 msgstr "Ver.disp"
+
