--- a/dselect/po/ChangeLog
+++ b/dselect/po/ChangeLog
@@ -1,3 +1,7 @@
+2006-05-16  Eddy Petrişor  <eddy.petrisor@gmail.com>
+
+	* ro.po: Updated to 289t; use only Romanian quotes.
+
 2006-05-08  Miroslav Kure  <kurem@debian.cz>
 
 	* cs.po: Updated to 289t.
