--- a/debian/changelog
+++ b/debian/changelog
@@ -30,6 +30,8 @@ dpkg (1.13.20~) UNRELEASED; urgency=low
     Ian Jackson. Closes: #315784, #313605
   * Try harder to detect dependency cycles that contain Provides
     links. Closes: #349120, #349442
+  * Update archtable to reflect current archive: Add amd64 and remove
+    sh. Closes: #367329
 
   [ Nicolas François ]
   * fix typos in the Russian man pages. Thanks to Stepan Golosunov.
