Flush the terminal's input before prompting the user.

--- a/debian/changelog
+++ b/debian/changelog
@@ -38,6 +38,8 @@ dpkg (1.13.20~) UNRELEASED; urgency=low
     Closes: #366587
   * Honour tabbing requested via --show-format even if the field to
     be printed is empty. Closes: #361671
+  * flush the terminal's input before prompting what to do with a
+    configuration file. Closes: #316551
 
   [ Updated dpkg Translations ]
   * Portuguese (Miguel Figueiredo).
