--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2006-05-15  Nicolas François  <nicolas.francois@centraliens.net>
+
+	* src/configure.c: Flush the terminal's input before
+	prompting the user.
+
 2006-05-15  Frank Lichtenheld  <djpig@debian.org>
 
 	* debian/archtable: Update to reflect current
