Fix the --force-depends-version option. This closes #57104.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,12 @@
 2006-05-15  Nicolas François  <nicolas.francois@centraliens.net>
 
+	* src/packages.c: Use fc_dependsversion (set by
+	--force-depends-version) when only the version of a
+	dependency is not satisfied. fc_dependsversion is never
+	used otherwise.
+
+2006-05-15  Nicolas François  <nicolas.francois@centraliens.net>
+
 	* src/configure.c: Flush the terminal's input before
 	prompting the user.
 
