--- a/debian/changelog
+++ b/debian/changelog
@@ -40,6 +40,7 @@ dpkg (1.13.20~) UNRELEASED; urgency=low
     be printed is empty. Closes: #361671
   * flush the terminal's input before prompting what to do with a
     configuration file. Closes: #316551
+  * Fix the --force-depends-version option. Closes: #57104
 
   [ Updated dpkg Translations ]
   * Portuguese (Miguel Figueiredo).
