--- a/man/ChangeLog
+++ b/man/ChangeLog
@@ -1,3 +1,7 @@
+2006-05-16  Peter Karlsson  <peterk@debian.org>
+
+	* sv/deb-old.5.sv.po, sv/dpkg.1.sv.po: Partial updates.
+
 2006-05-14  Peter Karlsson  <peterk@debian.org>
 
 	* sv/822-date.1.sv.po, sv/deb.5.sv.po, sv/deb-control.5.sv.po,
