--- a/man/sv/deb-old.5.sv.po
+++ b/man/sv/deb-old.5.sv.po
@@ -6,7 +6,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: dpkg man pages\n"
 "POT-Creation-Date: 2006-02-28  1:40+0200\n"
-"PO-Revision-Date: 2006-05-14 16:18+0100\n"
+"PO-Revision-Date: 2006-05-16 06:18+0100\n"
 "Last-Translator: Peter Karlsson <peterk@debian.org>\n"
 "Language-Team: Swedish <debian-l10n-swedish@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
@@ -17,13 +17,13 @@ msgstr ""
 #: deb-old.5:1
 #, no-wrap
 msgid "deb-old"
-msgstr ""
+msgstr "deb-old"
 
 # type: TH
 #: deb-old.5:1
 #, no-wrap
 msgid "2006-02-28"
-msgstr ""
+msgstr "2006-02-28"
 
 # type: TH
 #: deb-old.5:1
@@ -67,14 +67,13 @@ msgstr "BESKRIVNING"
 
 # type: Plain text
 #: deb-old.5:17
-#, fuzzy
 msgid ""
 "The B<.deb> format is the Debian binary package file format. This manual "
 "page describes the B<old> format, used before Debian 0.93. Please see B<deb>"
 "(5)  for details of the new format."
 msgstr ""
-"B<.deb>-formatet är Debians binära paketformat.  Denna manualsida beskriver "
-"det B<gamla> formatet som används före Debian 0.93.  Se B<deb>(5)  för "
+"B<.deb>-formatet är Debians binära paketformat. Denna manualsida beskriver "
+"det B<gamla> formatet som används före Debian 0.93. Se B<deb>(5) för "
 "detaljerad information om det nya formatet."
 
 # type: SH
@@ -103,7 +102,6 @@ msgstr ""
 
 # type: Plain text
 #: deb-old.5:28
-#, fuzzy
 msgid ""
 "The second line is a decimal string (without leading zeroes) giving the "
 "length of the first gzipped tarfile."
@@ -118,20 +116,17 @@ msgstr "Båda dessa rader avslutas med ett ensamt radbrytningstecken."
 
 # type: Plain text
 #: deb-old.5:35
-#, fuzzy
 msgid ""
 "The first tarfile contains the control information, as a series of ordinary "
 "files. The file B<control> must be present, as it contains the core control "
 "information."
 msgstr ""
 "Den första tar-filen innehåller kontrollinformationen, lagrade som ett antal "
-"vanliga filer, beskrivna i I<Debian Packaging Manual, sektion 2.2>.  Filen "
-"B<control> måste finnas, eftersom den innehåller grundläggande "
-"kontrollinformation."
+"vanliga filer. Filen B<control> måste finnas, eftersom den innehåller "
+"grundläggande kontrollinformation."
 
 # type: Plain text
 #: deb-old.5:46
-#, fuzzy
 msgid ""
 "In some very old archives, the files in the control tarfile may optionally "
 "be in a B<DEBIAN> subdirectory. In that case, the B<DEBIAN> subdirectory "
@@ -140,21 +135,20 @@ msgid ""
 "for `B<.>', that is, the current directory."
 msgstr ""
 "I vissa väldigt gamla arkiv kan filerna i kontroll-tarfilen eventuellt ligga "
-"i en underkatalog vid namn B<DEBIAN>.  Om så är fallet kommer underkatalogen "
+"i en underkatalog vid namn B<DEBIAN>. Om så är fallet kommer underkatalogen "
 "B<DEBIAN> även att finnas i kontroll-tarfilen, och kontroll-tarfilen kommer "
-"bara innehålla filer i den katalogen.  Eventuellt kan kontroll-tarfilen "
-"innehålla en post för . B<,> det vill säga aktuell katalog."
+"bara innehålla filer i den katalogen. Eventuellt kan kontroll-tarfilen "
+"innehålla en post för \"B<.>\", det vill säga aktuell katalog."
 
 # type: Plain text
 #: deb-old.5:50
-#, fuzzy
 msgid ""
 "The second gzipped tarfile is the filesystem archive, containing pathnames "
 "relative to the root directory of the system to be installed on. The "
 "pathnames do not have leading slashes."
 msgstr ""
 "Den andra gzip-packade tar-filen är filsystemsarkivet, vilken innehåller "
-"sökvägar relativt rotkatalogen för systemet det skall installeras på.  "
+"sökvägar relativt rotkatalogen för systemet det skall installeras på. "
 "Sökvägarna innehåller inte inledande snedstreck."
 
 # type: SH
@@ -167,11 +161,3 @@ msgstr "SE ÄVEN"
 #: deb-old.5:54
 msgid "B<deb>(5), B<dpkg-deb>(1), B<deb-control>(5)."
 msgstr "B<deb>(5), B<dpkg-deb>(1), B<deb-control>(5)."
-
-# type: TH
-#~ msgid "DEB-OLD"
-#~ msgstr "DEB-OLD"
-
-# type: TH
-#~ msgid "January 2000"
-#~ msgstr "Januari 2000"
