--- a/man/sv/dpkg.1.sv.po
+++ b/man/sv/dpkg.1.sv.po
@@ -17,13 +17,13 @@ msgstr ""
 #: dpkg.1:1
 #, no-wrap
 msgid "dpkg"
-msgstr ""
+msgstr "dpkg"
 
 # type: TH
 #: dpkg.1:1
 #, no-wrap
 msgid "2006-04-09"
-msgstr ""
+msgstr "2006-04-09"
 
 # type: TH
 #: dpkg.1:1
@@ -78,14 +78,13 @@ msgstr ""
 
 # type: Plain text
 #: dpkg.1:18
-#, fuzzy
 msgid ""
 "It should I<not> be used by package maintainers wishing to understand how "
 "B<dpkg> will install their packages. The descriptions of what B<dpkg> does "
 "when installing and removing packages are particularly inadequate."
 msgstr ""
 "Den bör I<inte> användas av paketansvariga som vill lära sig hur B<dpkg> "
-"kommer att installera deras paket.  Beskrivningen över vad B<dpkg> gör när "
+"kommer att installera deras paket. Beskrivningen över vad B<dpkg> gör när "
 "paket installeras och tas bort är speciellt otillräckliga."
 
 # type: SH
@@ -96,7 +95,6 @@ msgstr "BESKRIVNING"
 
 # type: Plain text
 #: dpkg.1:26
-#, fuzzy
 msgid ""
 "B<dpkg> is a tool to install, build, remove and manage Debian packages. The "
 "primary and more user-friendly front-end for B<dpkg> is B<dselect>(1). "
@@ -106,10 +104,10 @@ msgid ""
 "way."
 msgstr ""
 "B<dpkg> är ett mellannivåverktyg för att installera, bygga, ta bort och "
-"hantera Debianpaket.  Det primära och mer användarvänliga skalet runt "
-"B<dpkg> är B<dselect>(8).  B<dpkg> kontrolleras helt och hållet via "
+"hantera Debianpaket. Det primära och mer användarvänliga skalet runt "
+"B<dpkg> är B<dselect>(1). B<dpkg> kontrolleras helt och hållet via "
 "kommandoradsflaggor, vilka består av exakt en åtgärd och noll eller fler "
-"tillval.  Åtgärdsparametern talar om för dpkg vad som skall göras, och "
+"tillval. Åtgärdsparametern talar om för dpkg vad som skall göras, och "
 "tillvalen styr på vilket sätt åtgärden skall utföras."
 
 # type: Plain text
@@ -119,13 +117,13 @@ msgid ""
 "are B<dpkg-deb> actions, and if they are encountered, B<dpkg> just runs "
 "B<dpkg-deb> with the parameters given to it:"
 msgstr ""
-"B<dpkg> kan även användas som ett skal runt B<dpkg-deb>.  Följande är "
+"B<dpkg> kan även användas som ett skal runt B<dpkg-deb>. Följande är "
 "åtgärder för B<dpkg-deb>, och om de upptäcks kör B<dpkg> helt enkelt B<dpkg-"
 "deb> med de flaggor som getts:"
 
 # type: Plain text
 #: dpkg.1:40
-#, fuzzy, no-wrap
+#, no-wrap
 msgid ""
 "    B<-b>, B<--build>,\n"
 "    B<-c>, B<--contents>,\n"
@@ -158,15 +156,14 @@ msgstr "INFORMATION OM PAKET"
 
 # type: Plain text
 #: dpkg.1:48
-#, fuzzy
 msgid ""
 "B<dpkg> maintains some usable information about available packages. The "
 "information is divided in three classes: B<states>, B<selection states> and "
 "B<flags>. These values are intended to be changed mainly with B<dselect>."
 msgstr ""
-"B<dpkg> upprätthåller viss användbar information om tillgängliga paket.  "
+"B<dpkg> upprätthåller viss användbar information om tillgängliga paket. "
 "Informationen delas in i tre klasser: B<tillstånd>, B<markeringstillstånd> "
-"och B<flaggor>.  Dessa värden är avsedda att huvudsakligen ändras via "
+"och B<flaggor>. Dessa värden är avsedda att huvudsakligen ändras via "
 "B<dselect>."
 
 # type: SS
@@ -194,7 +191,6 @@ msgstr "B<halvt installerat>"
 
 # type: Plain text
 #: dpkg.1:56
-#, fuzzy
 msgid ""
 "The installation of the package has been started, but not completed for some "
 "reason."
@@ -220,7 +216,6 @@ msgstr "B<uppackat>"
 
 # type: Plain text
 #: dpkg.1:62
-#, fuzzy
 msgid "The package is unpacked, but not configured."
 msgstr "Paketet är uppackat, men inte konfigurerat."
 
@@ -275,7 +270,6 @@ msgstr "B<ta bort>"
 
 # type: Plain text
 #: dpkg.1:77
-#, fuzzy
 msgid ""
 "The package is selected for deinstallation (i.e. we want to remove all "
 "files, except configuration files)."
@@ -327,14 +321,13 @@ msgstr "B<ominstallation krävs>"
 
 # type: Plain text
 #: dpkg.1:91
-#, fuzzy
 msgid ""
 "A package marked B<reinst-required> is broken and requires reinstallation. "
 "These packages cannot be removed, unless forced with option B<--force-remove-"
 "reinstreq>."
 msgstr ""
 "Ett paket markerat B<ominstallation krävs> är trasigt och kräver "
-"ominstallation.  Dessa paket kan inte tas bort, såvida inte detta "
+"ominstallation. Dessa paket kan inte tas bort, såvida inte detta "
 "framtvingas med flaggan B<--force-remove-reinstreq>."
 
 # type: SH
@@ -370,7 +363,6 @@ msgstr "B<1.> Extrahera styrfilerna ur paketet."
 
 # type: Plain text
 #: dpkg.1:106
-#, fuzzy
 msgid ""
 "B<2.> If another version of the same package was installed before the new "
 "installation, execute I<prerm> script of the old package."
@@ -385,7 +377,6 @@ msgstr "B<3.> Kör I<preinst>-skriptet, om ett sådant medföljer paketet."
 
 # type: Plain text
 #: dpkg.1:113
-#, fuzzy
 msgid ""
 "B<4.> Unpack the new files, and at the same time back up the old files, so "
 "that if something goes wrong, they can be restored."
@@ -395,7 +386,6 @@ msgstr ""
 
 # type: Plain text
 #: dpkg.1:120
-#, fuzzy
 msgid ""
 "B<5.> If another version of the same package was installed before the new "
 "installation, execute the I<postrm> script of the old package. Note that "
@@ -403,18 +393,17 @@ msgid ""
 "because new files are written at the same time old files are removed."
 msgstr ""
 "B<5.> Om en annan version av samma paket redan fanns installerat vid "
-"nyinstallationen exekveras I<postrm>-skriptet för det gamla paketet.  "
+"nyinstallationen exekveras I<postrm>-skriptet för det gamla paketet. "
 "Observera att skriptet exekveras efter I<preinst> för det nya paketet "
 "eftersom de nya filerna skrivs samtidigt som de gamla tas bort."
 
 # type: Plain text
 #: dpkg.1:124
-#, fuzzy
 msgid ""
 "B<6.> Configure the package. See B<--configure> for detailed information "
 "about how this is done."
 msgstr ""
-"B<6.> Konfigurera paketet.  Se B<--configure> för detaljerad information om "
+"B<6.> Konfigurera paketet. Se B<--configure> för detaljerad information om "
 "hur detta görs."
 
 # type: TP
@@ -425,12 +414,11 @@ msgstr "B<dpkg --unpack >I<paketfil> ..."
 
 # type: Plain text
 #: dpkg.1:129
-#, fuzzy
 msgid ""
 "Unpack the package, but don't configure it. If B<--recursive> or B<-R> "
 "option is specified, I<package_file> must refer to a directory instead."
 msgstr ""
-"Packa upp paketet, men konfigurera det inte.  Om flaggan B<--recursive> "
+"Packa upp paketet, men konfigurera det inte. Om flaggan B<--recursive> "
 "eller B<-R> anges måste I<paketfil> istället vara en katalog."
 
 # type: TP
@@ -441,12 +429,11 @@ msgstr "B<dpkg --configure >I<paket> ... | B<-a> | B<--pending>"
 
 # type: Plain text
 #: dpkg.1:134
-#, fuzzy
 msgid ""
 "Reconfigure an unpacked package. If B<-a> or B<--pending> is given instead "
 "of I<package>, all unpacked but unconfigured packages are configured."
 msgstr ""
-"Konfigurera ett uppackat paket.  Om B<-a> eller B<--pending> anges istället "
+"Konfigurera ett uppackat paket. Om B<-a> eller B<--pending> anges istället "
 "för I<paket> konfigureras alla paket som har packats upp men ännu inte "
 "konfigurerats."
 
@@ -457,7 +444,6 @@ msgstr "Konfigurering består av följande steg:"
 
 # type: Plain text
 #: dpkg.1:141
-#, fuzzy
 msgid ""
 "B<1.> Unpack the configuration files, and at the same time back up the old "
 "configuration files, so that they can be restored if something goes wrong."
@@ -478,7 +464,6 @@ msgstr "B<dpkg -r> | B<--remove> | B<-P> | B<--purge >I<paket> ... | B<-a> | B<-
 
 # type: Plain text
 #: dpkg.1:155
-#, fuzzy
 msgid ""
 "Remove an installed package. B<-r> or B<--remove> remove everything except "
 "configuration files. This may avoid having to reconfigure the package if it "
@@ -488,14 +473,14 @@ msgid ""
 "a package name, then all packages unpacked, but marked to be removed or "
 "purged in file I</var/lib/dpkg/status>, are removed or purged, respectively."
 msgstr ""
-"Ta bort ett installerat paket.  B<-r> eller B<--remove> tar bort allting "
+"Ta bort ett installerat paket. B<-r> eller B<--remove> tar bort allting "
 "förutom konfigurationsfiler, vilket gör att du kan undvika att konfigurera "
-"om paketet om du senare installerar om det.  (Konfigurationsfiler listas i "
-"styrfilen I<debian/conffiles>).  B<-P> eller B<--purge> tar bort allting, "
-"inklusive konfigurationsfiler.  Om B<-a> eller B<--pending> anges istället "
-"för ett paketnamn kommer alla uppackade paket som i filen I</var/lib/dpkg/"
-"status> markerats för att tas bort eller rensas att tas bort eller rensas, "
-"respektive."
+"om paketet om du senare installerar om det. (Konfigurationsfiler listas i "
+"styrfilen I<debian/conffiles>). B<-P> eller B<--purge> tar bort allting, "
+"inklusive konfigurationsfiler. Om B<-a> eller B<--pending> anges istället "
+"för ett paketnamn kommer alla installerade uppackade paket som är "
+"markerade att tas bort eller rensas i filen I</var/lib/dpkg/status> "
+"att tas bort respektive rensas."
 
 # type: Plain text
 #: dpkg.1:157
@@ -519,13 +504,12 @@ msgstr "B<3.> Kör I<postrm>-skriptet"
 
 # type: TP
 #: dpkg.1:167
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "B<dpkg --update-avail> | B<--merge-avail> I<Packages-file>"
 msgstr "B<dpkg --update-avail> | B<--merge-avail> I<Packages-fil>"
 
 # type: Plain text
 #: dpkg.1:176
-#, fuzzy
 msgid ""
 "Update B<dpkg>'s and B<dselect>'s idea of which packages are available. With "
 "action B<--merge-avail>, old information is combined with information from "
@@ -535,10 +519,10 @@ msgid ""
 "record of available packages in I</var/lib/dpkg/available>."
 msgstr ""
 "Uppdatera B<dpkg>s och B<dselect>s lista över vilka paket som finns "
-"tillgängliga.  Med B<--merge-avail> kombineras den gamla informationen med "
-"informationen från I<Packages-filen>.  Med B<--update-avail> ersätts den "
-"gamla informationen med informationen från I<Packages-filen>.  I<Packages-"
-"filerna> som medföljer Debian heter helt enkelt I<Packages>.  B<dpkg> "
+"tillgängliga. Med B<--merge-avail> kombineras den gamla informationen med "
+"informationen från I<Packages-filen>. Med B<--update-avail> ersätts den "
+"gamla informationen med informationen från I<Packages-filen>. I<Packages-"
+"filerna> som medföljer Debian heter helt enkelt I<Packages>. B<dpkg> "
 "behåller sin lista över tillgängliga paket i I</var/lib/dpkg/available>."
 
 # type: Plain text
