Don't claim in dpkg man page that we set DPKG_OLD_CONFFILE and DPKG_NEW_CONFFILE on sub shells since we actually don't.

--- a/debian/changelog
+++ b/debian/changelog
@@ -32,6 +32,8 @@ dpkg (1.13.20~) UNRELEASED; urgency=low
     links. Closes: #349120, #349442
   * Update archtable to reflect current archive: Add amd64 and remove
     sh. Closes: #367329
+  * Don't claim in dpkg man page that we set DPKG_OLD_CONFFILE and
+    DPKG_NEW_CONFFILE on sub shells since we actually don't.
 
   [ Nicolas François ]
   * fix typos in the Russian man pages. Thanks to Stepan Golosunov.
