--- a/man/ChangeLog
+++ b/man/ChangeLog
@@ -1,3 +1,9 @@
+2006-05-17  Frank Lichtenheld  <djpig@debian.org>
+
+	* man/C/dpkg.1: We don't actually set
+	DPKG_OLD_CONFFILE and DPKG_NEW_CONFFILE on subshells,
+	so we shouldn't claim to do so.
+
 2006-05-16  Peter Karlsson  <peterk@debian.org>
 
 	* sv/deb-old.5.sv.po, sv/dpkg.1.sv.po: Partial updates.
@@ -5,11 +11,11 @@
 2006-05-14  Peter Karlsson  <peterk@debian.org>
 
 	* sv/822-date.1.sv.po, sv/deb.5.sv.po, sv/deb-control.5.sv.po,
-	  sv/deb-old.5.sv.po, sv/dpkg.1.sv.po, sv/dpkg.cfg.5.sv.po,
-	  sv/dpkg-deb.1.sv.po, sv/dpkg-query.1.sv.po, sv/dpkg-split.1.sv.po,
-	  sv/dselect.1.sv.po, sv/dselect.cfg.5.sv.po,
-	  sv/start-stop-daemon.8.sv.po: Began updating the Swedish
-	  translation.
+	sv/deb-old.5.sv.po, sv/dpkg.1.sv.po, sv/dpkg.cfg.5.sv.po,
+	sv/dpkg-deb.1.sv.po, sv/dpkg-query.1.sv.po, sv/dpkg-split.1.sv.po,
+	sv/dselect.1.sv.po, sv/dselect.cfg.5.sv.po,
+	sv/start-stop-daemon.8.sv.po: Began updating the Swedish
+	translation.
 
 2006-05-14  Philippe Batailler <philippe.batailler@free.fr>
 
