--- a/debian/changelog
+++ b/debian/changelog
@@ -34,6 +34,8 @@ dpkg (1.13.20~) UNRELEASED; urgency=low
     sh. Closes: #367329
   * Don't claim in dpkg man page that we set DPKG_OLD_CONFFILE and
     DPKG_NEW_CONFFILE on sub shells since we actually don't.
+  * Fix printing of user defined fields with --showformat and
+    document the existance of this feature in dpkg-query man page.
 
   [ Nicolas François ]
   * fix typos in the Russian man pages. Thanks to Stepan Golosunov.
