--- a/man/ChangeLog
+++ b/man/ChangeLog
@@ -1,3 +1,8 @@
+2006-05-18  Frank Lichtenheld  <djpig@debian.org>
+
+	* man/C/dpkg-query.1: Document that user defined
+	fields can also be printed with --showformat.
+
 2006-05-17  Frank Lichtenheld  <djpig@debian.org>
 
 	* man/C/dpkg.1: We don't actually set
