--- a/debian/changelog
+++ b/debian/changelog
@@ -17,7 +17,7 @@ dpkg (1.13.20~) UNRELEASED; urgency=low
   * Let dpkg-buildpackage pass through all remotely sensible
     -sX options to dpkg-source (-s[nsAkurKUR] currently).
     Closes: #36586
-  * Improve the description of --show-format in dpkg-deb
+  * Improve the description of --showformat in dpkg-deb
     man page and add a pointer to the complete description
     of the option in dpkg-query.
   * Don't spew out garbage from dpkg-deb, if the second argument
@@ -40,7 +40,7 @@ dpkg (1.13.20~) UNRELEASED; urgency=low
   [ Nicolas François ]
   * fix typos in the Russian man pages. Thanks to Stepan Golosunov.
     Closes: #366587
-  * Honour tabbing requested via --show-format even if the field to
+  * Honour tabbing requested via --showformat even if the field to
     be printed is empty. Closes: #361671
   * flush the terminal's input before prompting what to do with a
     configuration file. Closes: #316551
@@ -772,7 +772,7 @@ dpkg (1.13.1) experimental; urgency=low
   * md5sum no longer outputs "-" when no argument is supplied.
     Closes: #164591, #164889.
   * Add darcs metadirectory to dpkg-source diff ignore list.  Closes: #289760.
-  * Add new '-f' short option to dpkg-query as equivalent to --show-format.
+  * Add new '-f' short option to dpkg-query as equivalent to --showformat.
     Closes: #281627.
   * Report conffile conflicts and per-package errors on the status-fd.
     Closes: #297880.
