Update archtable to reflect current archive: Add amd64 and remove sh. Closes: #367329

--- a/debian/changelog
+++ b/debian/changelog
@@ -36,6 +36,9 @@ dpkg (1.13.20~) UNRELEASED; urgency=low
     DPKG_NEW_CONFFILE on sub shells since we actually don't.
   * Fix printing of user defined fields with --showformat and
     document the existance of this feature in dpkg-query man page.
+  * Make --forget-old-unavail more reliable by deleting architecture
+    information of removed packages. Patch by Piotr Engelking.
+    Closes: #208532
 
   [ Nicolas François ]
   * fix typos in the Russian man pages. Thanks to Stepan Golosunov.
