When building packages with dpkg-deb give a more useful error message in case a conffile entry has leading whitespace. Patch by David Lopez Moreno. Closes: #281562

--- a/debian/changelog
+++ b/debian/changelog
@@ -39,7 +39,10 @@ dpkg (1.13.20~) UNRELEASED; urgency=low
   * Make --forget-old-unavail more reliable by deleting architecture
     information of removed packages. Patch by Piotr Engelking.
     Closes: #208532
-
+  * When building packages with dpkg-deb give a more useful error
+    message in case a conffile entry has leading whitespace. Patch
+    by David Lopez Moreno. Closes: #281562
+  
   [ Nicolas François ]
   * fix typos in the Russian man pages. Thanks to Stepan Golosunov.
     Closes: #366587
