Finish the change for the po4a architecture (dpkg-architecture.1 was forgotten), and make some cleanup.

--- a/man/ChangeLog
+++ b/man/ChangeLog
@@ -1,3 +1,9 @@
+2006-05-21  Nicolas Francois  <nicolas.francois@centraliens.net>
+
+	* man/*/*.po, man/C/po/*.pot, po4a/: Ease the work of i18n robots: make a
+	directory for every manpage and move the POT and POs for a page in the
+	same directory.
+
 2006-05-18  Frank Lichtenheld  <djpig@debian.org>
 
 	* man/C/dpkg-query.1: Document that user defined
